fix: increase selected tab text color contrast (light mode)

--- a/dspublisher/theme/global.css
+++ b/dspublisher/theme/global.css
@@ -72,7 +72,7 @@ html {
   --docs-admonitionblock-important-border-color: var(--violet-400);
   --docs-admonitionblock-important-icon-color: var(--violet-600);
 
-  --docs-tab-selected-color: var(--blue-400);
+  --docs-tab-selected-color: var(--blue-500);
 
   --docs-imageblock-prominent-background-color: var(--indigo-400);
   --docs-imageblock-prominent-color: var(--color-white);
